--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -4,7 +4,7 @@
 - name: enable nodejs:20
   ansible.builtin.command: dnf module enable nodejs:20 -y
 
-- name: install nodejs
+- name: install nodejs and mysql
   ansible.builtin.dnf: # only works for Redhat family
     name: "{{ item }}"
     state: installed
