--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -1,67 +1,67 @@
-# - name: install nginx
-#   ansible.builtin.dnf:
-#     name: nginx
-#     state: latest
+- name: install nginx
+  ansible.builtin.dnf:
+    name: nginx
+    state: latest
 
-# - name: start and enabled nginx
-#   ansible.builtin.service:
-#     name: nginx
-#     state: started
-#     enabled: yes
+- name: start and enabled nginx
+  ansible.builtin.service:
+    name: nginx
+    state: started
+    enabled: yes
 
-# - name: delete default website
-#   ansible.builtin.file:
-#     path:  /usr/share/nginx/html
-#     state: absent  
+- name: delete default website
+  ansible.builtin.file:
+    path:  /usr/share/nginx/html
+    state: absent  
 
-# - name: create html directory
-#   ansible.builtin.file:
-#     path: /usr/share/nginx/html
-#     state: directory
+- name: create html directory
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: directory
 
-# - name: download and extract file 
-#   ansible.builtin.unarchive:
-#     src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
-#     dest: /usr/share/nginx/html
-#     remote_src: yes
+- name: download and extract file 
+  ansible.builtin.unarchive:
+    src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+    dest: /usr/share/nginx/html
+    remote_src: yes
 
-# if any changes in configuration only, then need to restart nginx
-# - name: copy backend config
-#   ansible.builtin.template:
-#     src: expense.conf.j2
-#     dest: /etc/nginx/default.d/expense.conf
-#   notify:
-#   - restart nginx
+if any changes in configuration only, then need to restart nginx
+- name: copy backend config
+  ansible.builtin.template:
+    src: expense.conf.j2
+    dest: /etc/nginx/default.d/expense.conf
+  notify:
+  - restart nginx
 
 # - name: restart nginx
 #   ansible.builtin.service:
 #     name: nginx
 #     state: restarted
 
+# change
+# - name: install nginx server
+#   ansible.builtin.dnf:
+#     name: nginx
+#     state: latest
 
-- name: install nginx server
-  ansible.builtin.dnf:
-    name: nginx
-    state: latest
+# - name: start and enable nginx
+#   ansible.builtin.service:
+#     name: nginx
+#     state: started
+#     enabled: yes
 
-- name: start and enable nginx
-  ansible.builtin.service:
-    name: nginx
-    state: started
-    enabled: yes
+# - name: run app pre-requisites
+#   ansible.builtin.import_role:
+#     name: common
+#     tasks_from: app-pre-req
 
-- name: run app pre-requisites
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: app-pre-req
-
-# if there is change in configuration only, then you need to restart nginx
-- name: copy backend conf
-  ansible.builtin.template:
-    src: expense.conf.j2
-    dest: /etc/nginx/default.d/expense.conf
-  notify:
-  - restart nginx
+# # if there is change in configuration only, then you need to restart nginx
+# - name: copy backend conf
+#   ansible.builtin.template:
+#     src: expense.conf.j2
+#     dest: /etc/nginx/default.d/expense.conf
+#   notify:
+#   - restart nginx
 
 # - name: restart nginx
 #   ansible.builtin.service:
