--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -2,3 +2,5 @@ login_user: root
 login_host: db.daws24.online
 login_password: ExpenseApp@1
 DB_HOST: db.daws24.online
+api_location: /app
+component: backend
