--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -16,12 +16,16 @@
   ansible.builtin.user: 
     name: expense
 
-- name: run app-pre-requisites   
+- name: run app-pre-requisites
+  tags:
+  - deployment   
   ansible.builtin.import_role:
     name: common
     tasks_from: app-pre-req
 
 - name: install npm dependencies
+  tags:
+  - deployment
   ansible.builtin.command: npm install
   args:
     chdir: /app
@@ -54,6 +58,8 @@
     daemon_reload: true
 
 - name: start and enabled backend service
+  tags:
+  - deployment
   ansible.builtin.service:
     name: backend
     state: started
