--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -7,7 +7,7 @@ keyed_groups:
   parent_group: ''
 
 filters:
-  tag:Name: "Backend*"
+  tag:Name: "backend*"
 
 compose:
   # This sets the ansible_host variable to connect with private ip address without changing the host name
