expense-aws-ec2-instances

--- a/expense-aws.yaml
+++ b/expense-aws.yaml
@@ -2,6 +2,10 @@
   hosts: localhost
   vars:
     zone: daws24.online
+    instances:
+    - db
+    - backend
+    - frontend
   tasks:
   - name: create ec2 instances
     amazon.aws.ec2_instance:
@@ -11,11 +15,20 @@
       image_id: ami-090252cbe0679e58
       tags:
         Name: "{{ item }}"
-    loop:
-    - db
-    - backend
-    - frontend
+    loop: "{{ instances }}"
     register: ec2_instances_info
 
-# - name: create r53 records
-#   amazon.aws.route53:
+    - name: print output
+      ansible.builtin.debug:
+        msg: output: "{{ ec2_instances_info }}"
+
+- name: create r53 records
+  amazon.aws.route53:
+    state: present
+    zone: "{{ zone }}"
+    record: "{{ item }}.{{ zone }}"
+    type: A
+    value: "{{ item.private_ip_address }}"
+    overwrite: true
+    ttl: 1
+  loop: "{{ ec2_instances_info.results.instances }}"
